--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-#Load Balancer for Distributed Key-Value Store
+# Load Balancer for Distributed Key-Value Store
 I implemented a load balancer in the 2nd semester of university with personal variants of data structures, such as: linked lists, circular lists and hash tables. It distributes key-value pairs across multiple servers and retrieves values from the appropriate server.
 
-#Functionality
+# Functionality
 The load balancer provides the following functionality:
 
 - Store key-value pairs
@@ -9,7 +9,7 @@ The load balancer provides the following functionality:
 - Add new servers to the load balancer
 - Remove existing servers from the load balancer
 
-#How to Use
+# How to Use
 To use the load balancer, call the apply_requests function and pass it an input file. The input file should contain requests, one per line, in the following format:
 
 - "store" followed by a key-value pair in quotes
@@ -17,7 +17,7 @@ To use the load balancer, call the apply_requests function and pass it an input 
 - "add_server" followed by a server id (integer)
 - "remove_server" followed by a server id (integer)
 
-#Example
+# Example
 For example, the input file:
 ```
 store "key1" "value1"
@@ -38,15 +38,11 @@ Stored value3 on server 2.
 Key key3 not present.
 ```
 
-#Compiling and Running
+# Compiling and Running
 
-To compile the program, run the following command:
-```
-make
-```
+To compile the program, run the following command: <br>
+```make``` <br>
 
-To run the program, use the following command:
-```
-./load-balancer input-file
-```
+To run the program, use the following command: <br>
+```./load-balancer input-file```
 
